DREM-63  ([DREM-32]ペアリング（UI、DP、DM）
現在までのソースコードをコミット（細かい修正はまだ）

Change-Id: I23005c1ede60696417462679fbf867d42e81e2c3

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -132,5 +132,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#222222" />
+    <Button
+        android:id="@+id/item_common_result_device_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="dcdcddc"
+        android:background="@drawable/selector_btn_click_bg"
+        android:textColor="@drawable/selector_text_click_bg"
+        android:layout_marginBottom="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:visibility="gone"
+        />
 
 </RelativeLayout>
