--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
@@ -1,45 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    style="@style/default_layout_style"
     android:layout_width="match_parent"
+    android:background="#000000"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:background="#FF0000">
-        <TextView
-            android:id="@+id/titleStbSelectActivity"
+        android:layout_height="@dimen/launch_relative_layout_high_size"
+        android:id="@+id/relativeLayout1">
+        <ImageView
+            android:id="@+id/paring_search_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/str_stb_select_title"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
+            android:src="@drawable/paring_search_icon"
+            android:baselineAlignBottom="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/launch_image_bottom_margin" />
+
     </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:text="@string/str_stb_select_result_text"
+        android:textColor="#ffffff"
+        android:gravity="center"
+        android:textSize="@dimen/launch_text_size"/>
 
-    <Button
-        android:id="@+id/button1STBSelectActivity"
+    <!--　　//TODO 取得したデバイス名をリストに設定する-->
+    <ListView
+        android:id="@+id/stb_device_name_list"
+        android:layout_width="match_parent"
+        android:layout_height="300dp">
+    </ListView>
+
+    <!--TODO 仮実装削除予定-->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
-        android:text="docomo STB1" />
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/button1STBSelectActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_btn_click_bg"
+            android:textColor="@drawable/selector_text_click_bg"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            android:text="docomo STB1" />
 
-    <Button
-        android:id="@+id/button2STBSelectActivity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
-        android:text="docomo STB2" />
+        <Button
+            android:id="@+id/button2STBSelectActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:text="docomo STB2" />
 
-    <Button
-        android:id="@+id/button3STBSelectActivity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
-        android:text="docomo STB3" />
+        <Button
+            android:id="@+id/button3STBSelectActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:text="docomo STB3" />
+
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/dAccountLoginYesSTBSelectActivity"
@@ -102,14 +129,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#ffffff"
-            android:text="次回以降表示しない" />
+            android:text="@string/str_stb_next_not_display_text" />
 
         <Button
             android:id="@+id/useWithoutPairingSTBParingInvitationActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="ペアリングしないでアプリを利用する" />
+            android:textColor="#000000"
+            android:text="@string/str_stb_no_pair_use_text" />
     </LinearLayout>
 
 </LinearLayout>
