--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
@@ -10,8 +10,7 @@
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="@dimen/launch_relative_layout_high_size"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/relativeLayout1">
@@ -23,7 +22,7 @@
             android:baselineAlignBottom="true"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="@dimen/launch_image_bottom_margin" />
 
     </RelativeLayout>
     <TextView
@@ -32,8 +31,7 @@
         android:layout_height="wrap_content"
         android:text="@string/str_stb_connect_success_text"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:textSize="@dimen/launch_text_size"
         android:layout_below="@+id/relativeLayout1"
-        android:layout_centerHorizontal="true"
-        android:visibility="visible"/>
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
