--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_paring_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_paring_main_layout.xml
@@ -2,7 +2,7 @@
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/default_layout_style"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,10 +11,7 @@
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="40dp">
+        android:layout_height="@dimen/launch_relative_layout_high_size">
 
         <ImageView
             android:id="@+id/paring_connecting_icon"
@@ -22,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/launch_image_bottom_margin"
             android:baselineAlignBottom="true"
             android:src="@drawable/paring_connecting_icon" />
 
@@ -32,22 +29,25 @@
         android:id="@+id/connect_result_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/relativeLayout1"
         android:gravity="center"
         android:text="@string/str_stb_pair_invitation_text"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:textSize="@dimen/launch_text_size"
         android:visibility="visible" />
-
-    <Button
-        android:id="@+id/useWithoutPairingSTBParingInvitationActivity"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:text="@string/str_stb_no_pair_use_text"
-        android:textColor="#000000"
-        android:textSize="15sp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="bottom">
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/useWithoutPairingSTBParingInvitationActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/str_stb_no_pair_use_text"
+            android:textColor="#000000"
+            android:textSize="@dimen/launch_text_size" />
+
+    </LinearLayout>
+
+</LinearLayout>
