--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -4,6 +4,12 @@
 
 <resources>
 
+    <!--Launch-->
+    <dimen name="launch_relative_layout_high_size">100dp</dimen>
+    <dimen name="launch_text_layout_high_size">40dp</dimen>
+    <dimen name="launch_image_bottom_margin">10dp</dimen>
+    <dimen name="launch_text_size">15sp</dimen>
+
     <!--Common-->
     <dimen name="header_title_text_size">17sp</dimen>
     <dimen name="list_item_title_text_size">15sp</dimen>
