--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
-    <RelativeLayout
+    android:background="@color/recorded_background"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.SearchView
+        android:id="@+id/record_list_main_layout_searchview"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FF0000">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="録画番組"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
-    </RelativeLayout>
+        android:layout_height="@dimen/recorded_searchview_height"
+        android:layout_marginBottom="@dimen/recorded_searchview_bottom_margin"
+        android:layout_marginLeft="@dimen/recorded_searchview_left_margin"
+        android:layout_marginRight="@dimen/recorded_searchview_right_margin"
+        android:layout_marginTop="@dimen/recorded_searchview_top_margin"
+        android:background="@color/keyword_search_background" />
+    <!-- 検索結果画面 -->
     <RelativeLayout
-        android:id="@+id/record_list_main_layout_ll1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/record_list_main_layout_tv1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="8/31(木) 21:00"/>
-        <TextView
-            android:layout_below="@id/record_list_main_layout_tv1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="BONES シーズン11 #8 「感謝祭の秘密」"/>
-    </RelativeLayout>
-    <View
+        android:id="@+id/record_list_main_layout_result"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#FFFFFF"/>
+        android:layout_height="match_parent">
+
+        <HorizontalScrollView
+            android:id="@+id/record_list_main_layout_scroll"
+            style="@style/tabTextView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/recorded_scroll_height"
+            android:fillViewport="true"
+            android:foregroundGravity="center_horizontal"
+            android:scrollbars="none" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/record_list_main_layout_viewpagger"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/record_list_main_layout_scroll"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+    </RelativeLayout>
 </LinearLayout>
