--- a/dTVTerminalApp/app/src/main/res/values/styles.xml
+++ b/dTVTerminalApp/app/src/main/res/values/styles.xml
@@ -39,4 +39,13 @@
         <item name="colorPrimaryDark">@color/contents_header_background</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <!--タブUI共通-->
+    <style name="tabTextView">
+        <item name="android:background">@color/list_item_background</item>
+        <item name="android:textSize">@dimen/list_item_title_text_size</item>
+        <item name="android:textColor">@color/white_text</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_marginTop">@dimen/recorded_scroll_top_margin</item>
+    </style>
 </resources>
