DREM-63  ([DREM-32]ペアリング（UI、DP、DM）
・STB選択画面ロジック部分の修正
・画面UI修正

Change-Id: I6f556e39525009896fe6fbdcffc7df5b2a9e77d8

--- a/dTVTerminalApp/app/src/main/res/values/styles.xml
+++ b/dTVTerminalApp/app/src/main/res/values/styles.xml
@@ -39,4 +39,12 @@
         <item name="colorPrimaryDark">@color/contents_header_background</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <!--Launch画面-->
+    <style name="CheckBox" parent="Theme.AppCompat.Light">
+        <!-- 枠線 -->
+        <item name="colorControlNormal">@color/white_text</item>
+        <!-- チェック時の色 -->
+        <item name="colorControlActivated">@color/white_text</item>
+    </style>
 </resources>
