--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
@@ -11,9 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/relativeLayout1">
+        android:id="@+id/stb_icon_relative_layout">
         <ImageView
             android:id="@+id/paring_connecting_image"
             android:layout_width="wrap_content"
@@ -32,6 +30,6 @@
         android:text="@string/str_stb_connect_success_text"
         android:textColor="#FFFFFF"
         android:textSize="@dimen/launch_text_size"
-        android:layout_below="@+id/relativeLayout1"
+        android:layout_below="@+id/stb_icon_relative_layout"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
