--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_paring_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_paring_main_layout.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/relativeLayout1"
+        android:id="@+id/stb_icon_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -40,13 +40,14 @@
         android:orientation="vertical"
         android:gravity="bottom">
 
-        <Button
+        <TextView
             android:id="@+id/useWithoutPairingSTBParingInvitationActivity"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/launch_text_layout_high_size"
             android:text="@string/str_stb_no_pair_use_text"
+            android:background="#FFFFFF"
             android:textColor="#000000"
-            android:textSize="@dimen/launch_text_size" />
+            android:gravity="center" />
 
     </LinearLayout>
 
