DREM-677 ([DREM-3]録画一覧画面(情報表示) ) 実装(UI,DP,DM) 対応内容：JavaDoc不足分の追加、ベタ書き箇所のdimens定義 担当者：日野
Change-Id: If2e537d57f694074d6ed428257ac9734640bb7fa

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -36,5 +36,24 @@
             android:layout_below="@id/record_list_main_layout_scroll"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true" />
+
+        <!-- 仕様通りに表示させるため、一時↓のように構成 -->
+        <com.nttdocomo.android.tvterminalapp.model.program.ChangeModeActionButton
+            android:id="@+id/recorded_List_filtering_layout_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom|end">
+
+            <ImageView
+                android:id="@+id/recorded_List_filtering_layout_image"
+                android:layout_width="@dimen/recorded_filtering_icon_width"
+                android:layout_height="@dimen/recorded_filtering_icon_height"
+                android:layout_marginBottom="@dimen/recorded_filtering_icon_margin_bottom"
+                android:layout_marginEnd="@dimen/recorded_filtering_icon_margin_end"
+                android:contentDescription="@null"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/ic_fiber_manual_record_white_24dp"/>
+
+        </com.nttdocomo.android.tvterminalapp.model.program.ChangeModeActionButton>
     </RelativeLayout>
 </LinearLayout>
