--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -74,4 +74,14 @@
     <dimen name="recorded_clip_tv_width">25dp</dimen>
     <dimen name="recorded_clip_tv_height">25dp</dimen>
     <dimen name="recorded_clip_tv_margin_end">8dp</dimen>
+    <dimen name="recorded_filtering_icon_width">80dp</dimen>
+    <dimen name="recorded_filtering_icon_height">80dp</dimen>
+    <dimen name="recorded_filtering_icon_margin_bottom">5dp</dimen>
+    <dimen name="recorded_filtering_icon_margin_end">5dp</dimen>
+
+    <!--タブ共通UI-->
+    <dimen name="list_tab_margin_left">15dp</dimen>
+    <dimen name="list_tab_margin_top">0dp</dimen>
+    <dimen name="list_tab_margin_right">0dp</dimen>
+    <dimen name="list_tab_margin_bottom">0dp</dimen>
 </resources>
