--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -5,11 +5,12 @@
 <resources>
 
     <!--Launch-->
-    <dimen name="launch_relative_layout_high_size">100dp</dimen>
     <dimen name="launch_text_layout_high_size">40dp</dimen>
     <dimen name="launch_image_bottom_margin">10dp</dimen>
-    <dimen name="launch_text_size">12sp</dimen>
+    <dimen name="launch_text_size">15dp</dimen>
     <dimen name="launch_text_bottom_margin">4dp</dimen>
+    <dimen name="launch_text_left_padding">30dp</dimen>
+    <dimen name="launch_text_end_padding">0dp</dimen>
 
     <!--Common-->
     <dimen name="header_title_text_size">17sp</dimen>
