--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_paring_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_paring_main_layout.xml
@@ -27,7 +27,7 @@
 
     <TextView
         android:id="@+id/connect_result_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/str_stb_pair_invitation_text"
