--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
@@ -10,7 +10,7 @@
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/launch_relative_layout_high_size"
         android:id="@+id/stb_icon_relative_layout">
         <ImageView
             android:id="@+id/paring_connecting_image"
@@ -25,8 +25,8 @@
     </RelativeLayout>
     <TextView
         android:id="@+id/connect_result_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_left_padding"
         android:text="@string/str_stb_connect_success_text"
         android:textColor="#FFFFFF"
         android:textSize="@dimen/launch_text_size"
