--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/launch_relative_layout_high_size"
         android:id="@+id/stb_icon_relative_layout">
         <ImageView
             android:id="@+id/paring_search_image"
@@ -23,7 +23,7 @@
     <TextView
         android:id="@+id/stb_select_status_text"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_height="@dimen/launch_stb_paring_result_layout"
         android:text="@string/str_stb_select_result_text_search"
         android:textColor="#ffffff"
         android:gravity="center"
@@ -33,7 +33,8 @@
     <ListView
         android:id="@+id/stb_device_name_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
     </ListView>
 
     <Button
@@ -79,19 +80,12 @@
         android:text="STBに同じdアカウントが登録されていない" />
 
     <LinearLayout
-        android:id="@+id/content"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-    </LinearLayout>
-
-    <LinearLayout
 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="bottom"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="1">
 
         <CheckBox
             android:id="@+id/checkBoxSTBSelectActivity"
@@ -99,7 +93,11 @@
             android:layout_height="@dimen/launch_text_layout_high_size"
             android:theme="@style/CheckBox"
             android:textColor="#FFFFFF"
-            android:text="@string/str_stb_next_not_display_text" />
+            android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+            android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+            android:text="@string/str_stb_next_not_display_text"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="@dimen/launch_stb_checkbox_bottom_margin"/>
 
         <TextView
             android:id="@+id/useWithoutPairingSTBParingInvitation"
@@ -108,6 +106,8 @@
             android:textColor="#000000"
             android:background="#FFFFFF"
             android:gravity="center"
+            android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+            android:layout_marginRight="@dimen/launch_stb_list_start_margin"
             android:text="@string/str_stb_no_pair_use_text" />
     </LinearLayout>
 
