--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="#000000"
@@ -27,14 +27,16 @@
         android:text="@string/str_stb_select_result_text_search"
         android:textColor="#ffffff"
         android:gravity="center"
-        android:layout_marginBottom="@dimen/launch_image_bottom_margin"
-        android:textSize="@dimen/launch_text_size"/>
+        android:textSize="@dimen/launch_text_size"
+        android:layout_below="@+id/stb_icon_relative_layout"
+        android:layout_alignParentStart="true" />
 
     <ListView
         android:id="@+id/stb_device_name_list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/stb_select_status_text"
+        android:layout_above="@+id/checkBoxSTBSelectActivity">
     </ListView>
 
     <Button
@@ -42,78 +44,88 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
-        android:text="dアカウントログイン済 " />
+        android:text="dアカウントログイン済 "
+        android:layout_above="@+id/dAccountLoginNoSTBSelectActivity"
+        android:layout_alignParentStart="true"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/dAccountLoginNoSTBSelectActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
-        android:text="dアカウント未ログイン " />
+        android:text="dアカウント未ログイン "
+        android:layout_above="@+id/dAccountAppliYesSTBSelectActivity"
+        android:layout_alignParentStart="true"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/dAccountAppliYesSTBSelectActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
-        android:text="端末内にdアカウントアプリがある" />
+        android:text="端末内にdアカウントアプリがある"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/dAccountAppliNoSTBSelectActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
-        android:text="端末内にdアカウントアプリがない" />
+        android:text="端末内にdアカウントアプリがない"
+        android:layout_above="@+id/dAccountSameYesSTBSelectActivity"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/dAccountSameYesSTBSelectActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
-        android:text="STBに同じdアカウントが登録されている" />
+        android:text="STBに同じdアカウントが登録されている"
+        android:layout_above="@+id/dAccountSameNoSTBSelectActivity"
+        android:layout_alignParentStart="true"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/dAccountSameNoSTBSelectActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
-        android:text="STBに同じdアカウントが登録されていない" />
+        android:text="STBに同じdアカウントが登録されていない"
+        android:layout_above="@+id/checkBoxSTBSelectActivity"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
 
-    <LinearLayout
+
+
+    <CheckBox
+        android:id="@+id/checkBoxSTBSelectActivity"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-    </LinearLayout>
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:text="@string/str_stb_next_not_display_text"
+        android:textColor="#FFFFFF"
+        android:theme="@style/CheckBox"
+        android:layout_marginBottom="@dimen/launch_stb_checkbox_bottom_margin"
+        android:layout_marginTop="@dimen/launch_stb_checkbox_top_margin"
+        android:layout_above="@+id/useWithoutPairingSTBParingInvitation"
+        android:layout_centerHorizontal="true" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/useWithoutPairingSTBParingInvitation"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:text="@string/str_stb_no_pair_use_text"
+        android:textColor="#000000"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:orientation="vertical">
-
-        <CheckBox
-            android:id="@+id/checkBoxSTBSelectActivity"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/launch_text_layout_high_size"
-            android:theme="@style/CheckBox"
-            android:textColor="#FFFFFF"
-            android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
-            android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-            android:text="@string/str_stb_next_not_display_text"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="@dimen/launch_stb_checkbox_bottom_margin"/>
-
-        <TextView
-            android:id="@+id/useWithoutPairingSTBParingInvitation"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/launch_text_layout_high_size"
-            android:textColor="#000000"
-            android:background="#FFFFFF"
-            android:gravity="center"
-            android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
-            android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-            android:text="@string/str_stb_no_pair_use_text" />
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
