DREM-52 ■TvPlayerActivity更新 ■MediaVideoInfo.javaを追加 ■AndroidManifest.xmlを更新

--- a/dTVTerminalApp/app/src/main/res/values/styles.xml
+++ b/dTVTerminalApp/app/src/main/res/values/styles.xml
@@ -39,4 +39,7 @@
         <item name="colorPrimaryDark">@color/contents_header_background</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <!--TvPlayerActivity-->
+    <style name="DiximPlayerPanelTheme" parent="@android:style/Theme.Holo.Light.Panel" />
 </resources>
