DREM-63  ([DREM-32]ペアリング（UI、DP、DM）
デバイス名タップ時の色表示修正

Change-Id: Ida2150bf4fe282f0828b4acfa4c683e0b68c5680

--- a/dTVTerminalApp/app/src/main/res/drawable/selector_text_click_bg.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/selector_text_click_bg.xml
@@ -4,7 +4,7 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@drawable/color_white" android:state_enabled="true" android:state_focused="false" android:state_pressed="false" />
-    <item android:drawable="@drawable/color_white" android:state_enabled="false" />
+    <item android:color="@drawable/color_white" android:state_enabled="false" />
     <item android:color="@drawable/color_black" android:state_pressed="true" />
     <item android:color="@drawable/color_black" android:state_focused="true" />
 </selector>
