--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
@@ -38,5 +38,12 @@
         android:text="設定画面へ"
         android:textColor="#ffffffff"/>
 
+    <Button
+        android:id="@+id/setting_activity_btn_to_stb_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="再ペアリング"
+        android:textColor="#ffffffff"/>
+
 
 </LinearLayout>
