DREM-349 [DREM-11-1]コンテンツ詳細(他サービス、STB連携機能)【ｄアニメ】 DREM-62 [DREM-31]リモコンエミュレート
・リモコンUI（Player操作・チャンネル操作）
・リモコンUIのページング
・リモコンUIの表示
・キー送信・キーのリピート送信

未実装
・リモコンUIの拡縮
・キー送信時のMotionEventの調整
・ボタン画像アイコンの押下時・非押下時の出しわけ（selector実装）

Change-Id: Ia7c5b6a4e43a55c50d5ddafe842f2aa2a57eece2

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
@@ -1,9 +1,27 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/base_rl"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/base_ll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <include
         android:id="@+id/base_title"
         layout="@layout/header_layout" />
-</LinearLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/remote_controller_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <include
+            android:id="@+id/base_remote_controller"
+            layout="@layout/remote_control_main_layout" />
+    </RelativeLayout>
+</RelativeLayout>
