--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -1,181 +1,69 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
+  -->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
-    android:orientation="vertical">
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/layout_titleBar"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#ff0000">
-
-        <TextView
-            android:id="@+id/text_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal|center"
-            android:maxLines="1"
-            android:text="REMOTE_CONTROL_START"
-            android:textColor="#ffffffff"
-            android:textSize="20dp" />
-
-    </RelativeLayout>
-
-    <TextView
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    app:visibility_height="100dp"
+    >
+    <com.nttdocomo.android.tvterminalapp.view.RemoteControllerView
+        android:id="@+id/msv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="これはリモートコントロール画面"
-        android:textColor="#ffffffff"/>
-
-    <GridLayout
-        android:columnCount="4"
-        android:rowCount="8"
-        android:verticalSpacing="4dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/keycode_dpad_up"
-            android:layout_width="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@android:color/transparent"
+        >
+        <LinearLayout
+            android:id="@+id/linear_layout"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="1"
-            android:layout_row="0"
-            android:layout_margin="5dp"
-            android:text="∧" />
+            android:background="@drawable/color_white"
+            android:orientation="vertical"
+            >
+            <FrameLayout
+                android:id="@+id/header_watch_by_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#0099ff">
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:src="@drawable/power"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/color_little_gray"
+                    android:layout_marginEnd="0dp"
+                    android:visibility="gone"
+                    android:id="@+id/remote_controller_iv_power"/>
+                <TextView
+                    android:id="@+id/watch_by_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="@string/remote_controller_viewpager_watch_by_tv"
+                    android:gravity="center"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/remote_controller_down"
+                    android:id="@+id/remote_controller_down"
+                    />
+            </FrameLayout>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/remokon_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                >
+            </android.support.v4.view.ViewPager>
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/keycode_dpad_down"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="1"
-            android:layout_row="2"
-            android:layout_margin="5dp"
-            android:text="∨" />
+    </com.nttdocomo.android.tvterminalapp.view.RemoteControllerView>
 
-        <Button
-            android:id="@+id/keycode_dpad_center"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="1"
-            android:layout_row="1"
-            android:layout_margin="5dp"
-            android:text="決定" />
-
-        <Button
-            android:id="@+id/keycode_dpad_left"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="0"
-            android:layout_row="1"
-            android:layout_margin="5dp"
-            android:text="＜" />
-
-        <Button
-            android:id="@+id/keycode_dpad_right"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="2"
-            android:layout_row="1"
-            android:layout_margin="5dp"
-            android:text="＞" />
-
-        <Button
-            android:id="@+id/keycode_dpad_home"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="1"
-            android:layout_row="3"
-            android:layout_margin="5dp"
-            android:text="ホーム" />
-
-        <Button
-            android:id="@+id/keycode_dpad_back"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="0"
-            android:layout_row="3"
-            android:layout_margin="5dp"
-            android:text="戻る" />
-
-        <Button
-            android:id="@+id/keycode_1"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="0"
-            android:layout_row="4"
-            android:layout_margin="5dp"
-            android:text="１" />
-
-        <Button
-            android:id="@+id/keycode_2"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="1"
-            android:layout_row="4"
-            android:layout_margin="5dp"
-            android:text="２" />
-
-        <Button
-            android:id="@+id/keycode_3"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:background="#ffffff"
-            android:layout_column="2"
-            android:layout_row="4"
-            android:layout_margin="5dp"
-            android:text="３" />
-
-        <Button
-            android:id="@+id/keycode_channel_up"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="10dp"
-            android:background="#ffffff"
-            android:layout_column="3"
-            android:layout_row="0"
-            android:layout_margin="5dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:text="チャンネル∧" />
-
-        <Button
-            android:id="@+id/keycode_channel_down"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="10dp"
-            android:background="#ffffff"
-            android:layout_column="3"
-            android:layout_row="1"
-            android:layout_margin="5dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:text="チャンネル∨" />
-
-    </GridLayout>
-
-</LinearLayout>
+</RelativeLayout>
